--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,14 @@ body{
   max-height: 1500px;
   margin-top: 8%;
   background: url(imagenes/fondo-restaurante.jpg);
+  background-size: cover;
   z-index: 3;
 }
 .logoRestaurante{
-  width: 25%;
-  height: 25%;
+  width: 40%;
+  height: 40%;
   position: relative;
-  left: 35%;
+  left: 30%;
 }
 #formularioDeValidador{
   background: rgb(255, 218, 185, .5);
@@ -33,34 +34,40 @@ body{
   border-color: rgb(255, 239, 213);
   padding: 5%;
   border-radius: 4%;
+  font-size: 100%;
+  font-family: "Libre Baskerville";
 }
 #inputNombre{
   background-color: rgb(255, 255, 255, .7);
   border-color: rgb(0, 0, 0);
   border-width: thin;
-  font-family: times;
+  font-family: "Libre Baskerville";
+  font-size: 100%;
 }
 #inputNumeroTarjeta{
   background-color: rgb(255, 255, 255, .7);
   border-color: rgb(0, 0, 0);
   border-width: thin;
-  font-family: times;
+  font-family: "Libre Baskerville";
+  font-size: 100%;
 }
 #botonValidar{
   font-weight: bolder;
-  font-family: times;
   border-width: thin;
   border-radius: 10%;
   border-color: rgb(0, 0, 0);
   background-color: rgb(255, 218, 185);
+  font-family: "Libre Baskerville";
+  font-size: 80%;
 }
 #limpiaInputsDeTexto{
   font-weight: bolder;
-  font-family: times;
   border-width: thin;
   border-radius: 10%;
   border-color: rgb(0, 0, 0);
   background-color: rgb(255, 218, 185);
+  font-family: "Libre Baskerville";
+  font-size: 80%;
 }
 footer{
   background-position: center;
