--- a/src/style.css
+++ b/src/style.css
@@ -33,7 +33,7 @@ body{
   background-color: rgb(255, 239, 213, .9);
   border-color: rgb(255, 239, 213);
   padding: 5%;
-  border-radius: 4%;
+  border-radius: 10%;
   font-size: 100%;
   font-family: "Libre Baskerville";
 }
@@ -52,23 +52,31 @@ body{
   font-size: 100%;
 }
 #botonValidar{
+  height: 90%;
+  width: 30%;
   font-weight: bolder;
   border-width: thin;
   border-radius: 10%;
   border-color: rgb(0, 0, 0);
-  background-color: rgb(255, 218, 185);
+  color: rgb(255,255,255);
+  background-color: rgb(0, 0, 0);
   font-family: "Libre Baskerville";
-  font-size: 80%;
+  font-size: 100%;
 }
 #limpiaInputsDeTexto{
+  height: 90%;
+  width: 30%;
   font-weight: bolder;
   border-width: thin;
   border-radius: 10%;
   border-color: rgb(0, 0, 0);
-  background-color: rgb(255, 218, 185);
+  color: rgb(255,255,255);
+  background-color: rgb(0, 0, 0);
   font-family: "Libre Baskerville";
-  font-size: 80%;
+  font-size: 100%;
 }
 footer{
-  background-position: center;
+  text-align: center;
+  font-family: "Libre Baskerville";
+  font-size: 70%;
 }
